--- a/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
+++ b/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
@@ -1,24 +1,54 @@
-﻿<Window x:Class="hello_cloud_wpf.MainWindow"
+﻿<Window x:Class="HelloCloudWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:hello_cloud_wpf"
+        xmlns:local="clr-namespace:HelloCloudWpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="440" Width="800"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}">
-    <WrapPanel>
-        <ListView Width="300" Height="400" Margin="12,13,10,0" Name="endpointListView" ItemsSource="{Binding Path=Endpoints}">
+        Title="MainWindow" Height="440" Width="800">
+    <Window.DataContext>
+        <local:MainWindowViewModel/>
+    </Window.DataContext>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <ListView Grid.Column="0" 
+                  Margin="10,10,10,10"
+                  Name="endpointListView" 
+                  SelectionMode="Single"
+                  FontFamily="consolas"
+                  ItemsSource="{Binding Endpoints}"
+                  SelectedItem="{Binding ActiveEndpoint}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <WrapPanel>
-                        <TextBlock Text="{Binding Key}"/>
+                        <TextBlock Text="{Binding Id}"/>
                         <TextBlock Text=" ("/>
-                        <TextBlock Text="{Binding Value}"/>
+                        <TextBlock Text="{Binding Name}"/>
                         <TextBlock Text=")"/>
                     </WrapPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </WrapPanel>
+        <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10,10" DataContext="{Binding ActiveEndpoint}">
+            <StackPanel Orientation="Horizontal" Margin="10,10">
+                <Label Content="ID:"/>
+                <Label Content="{Binding Id}"/>
+                <Label Content="Name:"/>
+                <Label Content="{Binding Name}"/>
+            </StackPanel>
+            <UniformGrid Rows="1">
+                <Button Content="Connect" Command="{Binding Path=ConnectCommand}" Margin="10,10"/>
+                <Button Content="Accept" Margin="10,10"/>
+                <Button Content="Reject" Margin="10,10"/>
+            </UniformGrid>
+            <StackPanel Orientation="Horizontal" Margin="10,10">
+                <Label Content="Status: "/>
+                <Label Content="Ready to connect"/>
+            </StackPanel>
+            <ListView Margin="10,10"></ListView>
+        </StackPanel>
+    </Grid>
 </Window>
