--- a/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
+++ b/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
@@ -15,7 +15,7 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="0" Margin="10,10,10,10">
-            <UniformGrid  Margin="0,0,0,10">
+            <UniformGrid  Margin="0,0,0,10" Rows="1">
                 <TextBox Margin="0,0,20,0"
                          Text="{Binding LocalEndpointName}"
                          FontFamily="consolas"/>
@@ -23,6 +23,10 @@
                           Name="isAdvertising" 
                           Checked="isAdvertising_Checked" 
                           Unchecked="isAdvertising_Unchecked"/>
+                <CheckBox Content="Discovering" 
+                          Name="isDiscovering" 
+                          Checked="isDiscovering_Checked" 
+                          Unchecked="isDiscovering_Unchecked"/>
             </UniformGrid>
             <ListView Name="endpointListView" 
                       SelectionMode="Single"
