--- a/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
+++ b/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
@@ -54,7 +54,7 @@
             </StackPanel>
             <UniformGrid Rows="1">
                 <Button Content="Connect" Command="{Binding Path=ConnectCommand}" Margin="10,10"/>
-                <Button Content="Accept" Margin="10,10"/>
+                <Button Content="Send" Command="{Binding Path=SendCommand}" Margin="10,10"/>
                 <Button Content="Reject" Margin="10,10"/>
             </UniformGrid>
             <StackPanel Orientation="Horizontal" Margin="10,10">
