--- a/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
+++ b/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
@@ -45,21 +45,21 @@
                 </ListView.ItemTemplate>
             </ListView>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10,10" DataContext="{Binding ActiveEndpoint}">
+        <StackPanel Orientation="Vertical" Grid.Column="1" Margin="10,10">
             <StackPanel Orientation="Horizontal" Margin="10,10">
                 <Label Content="ID:"/>
-                <Label Content="{Binding Id}"/>
+                <Label Content="{Binding ActiveEndpoint.Id}"/>
                 <Label Content="Name:"/>
-                <Label Content="{Binding Name}"/>
+                <Label Content="{Binding ActiveEndpoint.Name}"/>
             </StackPanel>
             <UniformGrid Rows="1">
-                <Button Content="Connect" Command="{Binding Path=ConnectCommand}" Margin="10,10"/>
-                <Button Content="Accept" Command="{Binding Path=AcceptCommand}" Margin="10,10"/>
-                <Button Content="Send" Command="{Binding Path=SendCommand}" Margin="10,10"/>
+                <Button Content="Connect" Command="{Binding ActiveEndpoint.ConnectCommand}" Margin="10,10"/>
+                <Button Content="Accept" Command="{Binding ActiveEndpoint.AcceptCommand}" Margin="10,10"/>
+                <Button Content="Send" Command="{Binding ActiveEndpoint.SendCommand}" Margin="10,10"/>
             </UniformGrid>
             <StackPanel Orientation="Horizontal" Margin="10,10">
-                <Label Content="Status: "/>
-                <Label Content="Ready to connect"/>
+                <Label Content="State: "/>
+                <Label Content="{Binding ActiveEndpoint.State}"/>
             </StackPanel>
             <ListView Margin="10,10"></ListView>
         </StackPanel>
