--- a/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
+++ b/hello_cloud_wpf/hello_cloud_wpf/MainWindow.xaml
@@ -26,28 +26,31 @@
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0" Grid.Row="0" Content="Local endpoint" FontWeight="Bold"/>
                 <TextBox Grid.Column="1" Grid.Row="0"
-                         Margin="5,5" Text="{Binding LocalEndpointName}"
-                            FontFamily="consolas"/>
+                         IsEnabled="{Binding IsNotAdvertising}"
+                         Margin="5,5" 
+                         Text="{Binding LocalEndpointName}"
+                         FontFamily="consolas"/>
                 <CheckBox Grid.Column="2" Grid.Row="0"
                     Content="Advertising"
                             VerticalAlignment="Center"
                             Name="isAdvertising" 
-                            Checked="isAdvertising_Checked" 
-                            Unchecked="isAdvertising_Unchecked"/>
+                            Checked="IsAdvertisingChecked" 
+                            Unchecked="IsAdvertisingUnchecked"/>
                 <CheckBox Grid.Column="3" Grid.Row="0"
                     Content="Discovering" 
                             VerticalAlignment="Center"
                             Name="isDiscovering" 
-                            Checked="isDiscovering_Checked" 
-                            Unchecked="isDiscovering_Unchecked"/>
+                            Checked="IsDiscoveringChecked" 
+                            Unchecked="IsDiscoveringUnchecked"/>
             </Grid>
             <Label DockPanel.Dock="Top" Content="Remote endpoints" FontWeight="Bold"/>
-            <ListView Name="endpointListView" 
+            <ListView Height="100"
+                      Name="endpointListView"
                       DockPanel.Dock="Top"
                       SelectionMode="Single"
-                      FontFamily="consolas"
+                      FontFamily="Consolas"
                       ItemsSource="{Binding Endpoints}"
-                      SelectedItem="{Binding SelectedEndpoint}" Height="100">
+                      SelectedItem="{Binding SelectedEndpoint}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <WrapPanel>
@@ -59,37 +62,43 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Label DockPanel.Dock="Top" Content="Log" FontWeight="Bold"/>
-            <ListView ItemsSource="{Binding LogEntries}"/>
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="0,5">
+                <Label Content="Log" FontWeight="Bold"/>
+                <Button Command="{Binding ClearLogCommand}">
+                    <Image Width="18" Height="18" Source="/Resources/Delete.png" />
+                </Button>
+            </StackPanel>
+            <ListView ItemsSource="{Binding LogEntries}" FontFamily="Consolas"/>
         </DockPanel>
-        <DockPanel Grid.Column="1" Margin="10,10" DataContext="{Binding SelectedEndpoint}">
+        <DockPanel Grid.Column="1" Margin="10,10" 
+                   DataContext="{Binding SelectedEndpoint, TargetNullValue={x:Static local:MainWindowViewModel.NullSelectedEndpoint}}">
             <UniformGrid DockPanel.Dock="Top" Rows="2" Margin="0,0">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <Label FontWeight="Bold" Content="Id"/>
-                    <Label Content="{Binding Id}"/>
+                    <Label Content="{Binding Id}" FontFamily="Consolas"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <Label FontWeight="Bold" Content="Name"/>
-                    <Label Content="{Binding Name}"/>
+                    <Label Content="{Binding Name}" FontFamily="Consolas"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <Label FontWeight="Bold" Content="Medium"/>
-                    <Label Content="{Binding Medium}"/>
+                    <Label Content="{Binding MediumReadableName}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <Label FontWeight="Bold" Content="State"/>
                     <Grid>
                         <Image Grid.Column="0" Grid.Row="0"
                                Height="24" Width="24" 
-                               Visibility="{Binding SpinnerVisibility}" 
+                               Visibility="{Binding SpinnerIconVisibility}" 
                                gif:ImageBehavior.AnimatedSource="/Resources/Spinner.gif"/>
                         <Image Grid.Column="0" Grid.Row="0"
                                Height="24" Width="24"
-                               Visibility="{Binding CheckMarkVisibility}"
+                               Visibility="{Binding GreenIconVisibility}"
                                Source="/Resources/Green.png"/>
                         <Image Grid.Column="0" Grid.Row="0"
                                Height="24" Width="24"
-                               Visibility="{Binding GrayDotVisibility}"
+                               Visibility="{Binding Path=GrayIconVisibility}"
                                Source="/Resources/Gray.png"/>
                     </Grid>
                     <Label Content="{Binding State}"/>
@@ -101,7 +110,9 @@
                 <Button Content="Disconnect" Command="{Binding DisconnectCommand}" Margin="10,10"/>
             </UniformGrid>
             <Label DockPanel.Dock="Top" Content="Transfers" FontWeight="Bold"/>
-            <ListView DockPanel.Dock="Bottom" Margin="0,0"/>
+            <ListView DockPanel.Dock="Bottom" Margin="0,0"
+                      FontFamily="Consolas"
+                      ItemsSource="{Binding Transfers}"/>
         </DockPanel>
     </Grid>
 </Window>
