--- a/hello_cloud_android/app/src/main/res/values/themes.xml
+++ b/hello_cloud_android/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.HelloWorld" parent="Theme.Material3.DynamicColors.DayNight">
+    <style name="Base.Theme.HelloCloud" parent="Theme.Material3.DynamicColors.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.HelloWorld" parent="Base.Theme.HelloWorld" />
+    <style name="Theme.HelloCloud" parent="Base.Theme.HelloCloud" />
 </resources>
