Download logic. Firebase API getFile doesn't seem to work with a uri. I'm downloading everything into the memory.

--- a/hello_cloud_android/app/src/main/res/layout/item_transfer.xml
+++ b/hello_cloud_android/app/src/main/res/layout/item_transfer.xml
@@ -24,7 +24,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:text="@{transferViewModel.remotePath}" />
+            android:text="@{transferViewModel.description}" />
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
