Button enable logic. It looks like it's a little buggy. Oh wel...

--- a/hello_cloud_android/app/src/main/res/layout/fragment_endpoint.xml
+++ b/hello_cloud_android/app/src/main/res/layout/fragment_endpoint.xml
@@ -126,6 +126,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:drawableStart="@drawable/connect"
+                android:enabled="@{endpointViewModel.state == com.google.hellocloud.EndpointViewModel.State.DISCOVERED}"
                 android:text="Connect" />
 
             <Button
@@ -135,6 +136,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:drawableStart="@drawable/disconnect"
+                android:enabled="@{endpointViewModel.state == com.google.hellocloud.EndpointViewModel.State.CONNECTED}"
                 android:text="Disonnect" />
         </LinearLayout>
 
