--- a/hello_cloud_android/app/src/main/res/layout/fragment_incoming_files.xml
+++ b/hello_cloud_android/app/src/main/res/layout/fragment_incoming_files.xml
@@ -36,6 +36,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
                 android:drawableStart="@drawable/download"
+                android:enabled="@{endpointViewModel.canDownload}"
                 android:text="Download" />
         </LinearLayout>
 
